# jdk4py

./: .gitignore  .python-version  LICENSE  Pipfile  README.md  build_java_runtime.py  hatch_build.py  pyproject.toml  setup.py
.github/actions/build-conda-package/: action.yaml
.github/actions/build-conda-packages/: action.yaml
.github/actions/build-java-runtime/: action.yaml
.github/actions/build-jdk/: action.yaml
.github/actions/build-python-wheel/: action.yaml
.github/actions/build-wheel/: action.yaml
.github/actions/create-conda-package/: action.yaml
.github/actions/create-python-wheel/: action.yaml
.github/actions/install-java-runtime/: action.yaml
.github/actions/setup-uv/: action.yaml
.github/workflows/: build.yaml  cross-platform-build.yaml  deployment-macos.yaml  deployment-ubuntu.yaml  deployment-windows.yaml  deployment.yaml  platform-specific-build.yaml  publish.yaml  test.yaml  test.yaml.bak
atotijdk/: __init__.py  version.py
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
jdk4py/: __init__.py  java_version.txt  version.py
scripts/: _architectures.py  build_java_runtime.py  build_jdk.py  get_platform_tag.py  locales.json  print_java_version.py  set_environment.py  set_java_version.py  set_version.py  set_versions.py  upload.py  version.py
src/jdk4py/: __init__.py  _added_modules.py  _included_locales.py  version.json  versions.json
tests/: __init__.py  test_java_version.py  test_jdk4py.py  test_paths.py  test_run_jvm.py
tests/resources/: GetLocale.java  GetLocales.java  HelloWorld.java  PrintAvailableLocales.java  PrintLocaleNumberFormats.java  README.md  locales.txt
