[build-system]
build-backend = "hatchling.build"
requires = [
    # Keep pinned to ensure same version is used by `conda build` (version must be available on anaconda).
    # Keep in sync with version in `tool.uv.dev-dependencies`.
    "hatchling ==1.27.0",
]

[dependency-groups]
dev = [
    # Keep in sync with version in `build-system.requires`.
    "hatchling ==1.27.0",
    # Keep pinned to ensure same version is used by `conda build` which does not use `uv.lock` (the version must be available on anaconda).
    "pytest ==8.4.2",
    "ruff",
    "ty",
]

[project]
authors = [{ email = "dev@atoti.io", name = "ActiveViam" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = []
description = "A JDK shipped in a Python package"
dynamic = ["version"]
keywords = ["jdk", "java", "jvm", "jre"]
name = "jdk4py"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/activeviam/jdk4py"

[tool.hatch.build.hooks.custom]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.build.targets.wheel]
artifacts = ["java-runtime"]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.ruff.lint]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D203",
    "D211",
    "D212",
    "EM102",
    "ISC001",
    "S101",
    "TRY003",
]
select = ["ALL"]

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
# Keep pinned to ensure same version is used on CI.
required-version = "==0.8.24"
trusted-publishing = "always"
