[build-system]
build-backend = "uv_build"
requires = ["uv-build"]

[dependency-groups]
dev = [
    # Keep pinned to ensure same version is used by `conda build` (see `conda.recipe/meta.yaml`).
    "pytest ==9.0.3",
    "ruff",
    "ty",
    # Remove once https://github.com/astral-sh/uv/issues/14827 is closed.
    "wheel",
]

[project]
authors = [{ email = "dev@atoti.io", name = "ActiveViam" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dependencies = []
description = "A JDK shipped in a Python package"
keywords = ["jdk", "java", "jvm", "jre"]
name = "jdk4py"
readme = "README.md"
requires-python = ">=3.10"
version = "25.0.2.1"

[project.urls]
Repository = "https://github.com/activeviam/jdk4py"

[tool.pytest]
filterwarnings = ["error"]

[tool.ruff.lint]
ignore = [
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D203",
    "D211",
    "D212",
    "E501",
    "EM102",
    "ISC001",
    "S101",
    "TRY003",
]
select = ["ALL"]

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
# Keep pinned to ensure same version is used on CI and by `conda build` (see `conda.recipe/meta.yaml`).
required-version = "==0.11.6"
trusted-publishing = "always"
